[package]
name = "tb-sys"
links = "tb"
version = "0.1.0"
edition = "2021"
description = "Bindings for the tb compiler backend"
license = "MIT"
repository = "https://github.com/MCorange99/tb-sys"
exclude = ["/Cuik/", "/playground/"]
include = [".gitmodules"]

[workspace]
exclude = [ "playground" ]

[build-dependencies]
bindgen = "0.71.1"
